Social navigation spacing fixed.

--- a/source/less/modules/_social-navigation.less
+++ b/source/less/modules/_social-navigation.less
@@ -7,8 +7,8 @@
 		padding-right: 5px;
 	}
 
-	a {
+	&__item {
 		display: block;
-		padding: 3px 0;
+		padding: 4px 0;
 	}
 }
